fixed services card overlap

--- a/apps/frontend/components/Services/cards/ServicesCardSlideUp.module.css
+++ b/apps/frontend/components/Services/cards/ServicesCardSlideUp.module.css
@@ -1,8 +1,6 @@
 /* Wrapper for each card */
 .cardWrapper {
   position: absolute;
-  width: 100%;
-  height: auto;
   transition: transform 0.5s ease, top 0.5s ease;
   cursor: pointer;
   overflow: hidden;
